# scentair

./: .env.local  .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/crates/scentair_admin/scentair_admin_infrastructure/: Cargo.toml
backend/crates/scentair_admin/scentair_admin_usecase/: Cargo.toml
backend/crates/scentair_app/scentair_app_backend/: Cargo.toml
backend/crates/scentair_app/scentair_app_infrastructure/: Cargo.toml
backend/crates/scentair_app/scentair_app_usecase/: Cargo.toml
backend/crates/scentair_app/scentair_app_usecase/src/: lib.rs
backend/crates/scentair_app/scentair_app_usecase/src/auth/: mod.rs
backend/crates/scentair_app/scentair_app_usecase/src/auth/accept_sign_up_token/: mod.rs  tests.rs
backend/crates/scentair_app/scentair_app_usecase/src/auth/already_taken_email_address/: mod.rs  tests.rs
backend/crates/scentair_app/scentair_app_usecase/src/auth/sign_in/: mod.rs  tests.rs
backend/crates/scentair_app/scentair_app_usecase/src/auth/sign_up/: mod.rs  tests.rs
backend/crates/scentair_console/scentair_console_backend/src/: main.rs
backend/crates/scentair_sdk/scentair_sdk_backend/: Cargo.toml
backend/crates/scentair_worker/scentair_worker_backend/: Cargo.toml
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/crypto/src/password/: argon2.rs  mod.rs
crates/database/: Cargo.toml
crates/database/src/: connection.rs  lib.rs  postgres.rs  postgresql.rs
crates/domain/: Cargo.toml
crates/domain/src/: email_address.rs  lib.rs
crates/domain/src/date_time/: mod.rs
crates/domain/src/identity/: mod.rs  ordered.rs  unordered.rs
crates/domain/src/user/: mod.rs  name.rs
crates/scentair_admin/scentair_admin_backend/: Cargo.toml
crates/scentair_app/scentair_app_adapter/: Cargo.toml
crates/scentair_app/scentair_app_backend/: Cargo.toml
crates/scentair_app/scentair_app_backend/src/: main.rs
crates/scentair_app/scentair_app_usecase/: Cargo.toml
crates/scentair_console/scentair_console_backend/: Cargo.toml
crates/scentair_console/scentair_console_infrastructure/: Cargo.toml
crates/scentair_console/scentair_console_usecase/: Cargo.toml
crates/scentair_sdk/scentair_sdk_infrastructure/: Cargo.toml
crates/scentair_sdk/scentair_sdk_usecase/: Cargo.toml
crates/scentair_worker/scentair_worker_infrastructure/: Cargo.toml
crates/scentair_worker/scentair_worker_usecase/: Cargo.toml
frontend/scentair_web/: README.md
frontend/scentair_web/apps/scentair_app/: README.md  package.json
frontend/scentair_web/apps/scentair_app/src/app/: layout.tsx  page.tsx
migrations/: 20240820160820_allow_extensions.down.sql  20240820160820_allow_extensions.up.sql  20240820160820_allow_uuid_extension.down.sql  20240820160820_allow_uuid_extension.up.sql  20240820160924_create_table_user.down.sql  20240820160924_create_table_user.up.sql  20240820164228_create_table_credential.down.sql  20240820164228_create_table_credential.up.sql  20240820164909_create_table_password.down.sql  20240820164909_create_table_password.up.sql  20240820171022_create_table_session.up.sql  20240820171445_create_table_verification.down.sql  20240820171445_create_table_verification.up.sql  20240820181137_create_table_organization.down.sql  20240820181137_create_table_organization.up.sql  20240821014946_create_table_rbac.down.sql  20240821014946_create_table_rbac.up.sql  20240826015902_create_table_term.down.sql  20240826015902_create_table_term.up.sql  20240826035427_create_table_notification.down.sql  20240826035427_create_table_notification.up.sql
