[workspace]
resolver = "2"
members = [
  "crates/scentair_admin/scentair_admin_backend",
  "crates/scentair_admin/scentair_admin_infrastructure",
  "crates/scentair_admin/scentair_admin_usecase",
  "crates/scentair_app/scentair_app_backend",
  "crates/scentair_app/scentair_app_infrastructure",
  "crates/scentair_app/scentair_app_usecase",
  "crates/scentair_console/scentair_console_backend",
  "crates/scentair_console/scentair_console_infrastructure",
  "crates/scentair_console/scentair_console_usecase",
  "crates/scentair_sdk/scentair_sdk_backend",
  "crates/scentair_sdk/scentair_sdk_infrastructure",
  "crates/scentair_sdk/scentair_sdk_usecase",
  "crates/scentair_worker/scentair_worker_backend",
  "crates/scentair_worker/scentair_worker_infrastructure",
  "crates/scentair_worker/scentair_worker_usecase",
]

[workspace.dependencies]
anyhow = "1.0.86"
insta = "1.39.0"
thiserror = "1.0.63"
rocket = { version = "0.5.1", features = ["json", "uuid"] }
serde = { version = "1.0.208", features = ["derive"] }
sqlx = { version = "0.8.0", features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
tokio = { version = "1.39.3", features = ["full"] }
