[workspace]
resolver = "2"
members = [
  "backend/crates/scentair_admin/scentair_admin_backend",
  "backend/crates/scentair_admin/scentair_admin_infrastructure",
  "backend/crates/scentair_admin/scentair_admin_usecase",
  "backend/crates/scentair_app/scentair_app_backend",
  "backend/crates/scentair_app/scentair_app_infrastructure",
  "backend/crates/scentair_app/scentair_app_usecase",
  "backend/crates/scentair_console/scentair_console_backend",
  "backend/crates/scentair_console/scentair_console_infrastructure",
  "backend/crates/scentair_console/scentair_console_usecase",
  "backend/crates/scentair_sdk/scentair_sdk_backend",
  "backend/crates/scentair_sdk/scentair_sdk_infrastructure",
  "backend/crates/scentair_sdk/scentair_sdk_usecase",
  "backend/crates/scentair_worker/scentair_worker_backend",
  "backend/crates/scentair_worker/scentair_worker_infrastructure",
  "backend/crates/scentair_worker/scentair_worker_usecase",
  "crates/crypto",
  "crates/database",
  "crates/domain",
]

[workspace.dependencies]
anyhow = "1.0.86"
assert_matches = "1.5.0"
async-trait = "0.1.82"
insta = "1.31.0"
thiserror = "1.0.63"
rocket = { version = "0.5.1", features = ["json", "uuid"] }
serde = { version = "1.0.208", features = ["derive"] }
sqlx = { version = "0.8.0", features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
tokio = { version = "1.40.0", features = ["full"] }
