[package]
name = "scentair_admin_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { workspace = true }
scentair_admin_infrastructure = { path = "../scentair_admin_infrastructure" }
scentair_admin_usecase = { path = "../scentair_admin_usecase" }
serde = { workspace = true }
tokio = { workspace = true }
