[package]
name = "scentair_console_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { workspace = true }
scentair_console_infrastructure = { path = "../scentair_console_infrastructure" }
scentair_console_usecase = { path = "../scentair_console_usecase" }
serde = { workspace = true }
tokio = { workspace = true }
