[package]
name = "scentair_app_usecase"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
crypto = { path = "../../../../crates/crypto" }
domain = { path = "../../../../crates/domain" }
thiserror = { workspace = true }
tokio = { workspace = true }
