[package]
name = "scentair_sdk_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { workspace = true }
scentair_sdk_infrastructure = { path = "../scentair_sdk_infrastructure" }
scentair_sdk_usecase = { path = "../scentair_sdk_usecase" }
serde = { workspace = true }
tokio = { workspace = true }
